2016-01-21  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Add more debug.
	* lib/Driver.cpp: Likewise.
	* lib/Framework.cpp: Likewise.
	* lib/ML/FileML.cpp: Likewise.

2016-01-20  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/DatabaseQuery.h (DatabaseQuery): Make move
	constructor non-default, as we now have an implementation.
	(DatabaseQuery::m_is_init): Add member keeping track of whether
	the query is currently initialized and useable.
	* include/mageec/Util.h (UUID::data): Return a reference to the
	data instead of a copy.
	* lib/DatabaseQuery.cpp (DatabaseQuery::DatabaseQuery): Implement
	move constructor.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Fix doxygen comments.
	* include/mageec/AttributeSet.h: Likewise.
	* include/mageec/Database.h: Likewise.
	* include/mageec/DatabaseQuery.h: Likewise.
	* include/mageec/ML.h: Likewise.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* doc/CMakeLists: Make and install pdf documentation.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* lib/Driver.cpp (getMachineLearners): Remove wildcard match for
	--ml flag.
	(trainDatabase): Add debug when training for each metric.
	* lib/FileML.cpp: Fix gcc warnings and errors.
	* lib/Util.cpp: Likewise.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Use sane defaults for options, add option for
	the GCC plugin include directory.
	* doc/CMakeLists.txt: Rename all-doc, all-info, all-html, all-pdf to
	just doc, info, html and pdf respectively.
	* lib/ML/C5/CMakeLists.txt: Added a minimum required version.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::addFeaturesAfterPass):
	Removed method, continuous feature extraction interface removed.
	* lib/Database.cpp (create_compilation_feature_table):
	Removed SQL query.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/ML.h: Remove iterative training interfaces.